# perf-o-meter

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: perfometer.html
perfometer/: CMakeLists.txt
perfometer/benchmark/: benchmark_register_constant_string.cpp
perfometer/cmake/: clang.cmake  msvc.cmake
perfometer/include/perfometer/: config.h  config.h.in  format.h  helpers.h  mutex.h  perfometer.h  thread.h  time.h
perfometer/samples/: events.cpp  pause.cpp  simple.cpp  strings.cpp  thread_pool.cpp  threads.cpp
perfometer/src/: formatter.h  perfometer.cpp  record_buffer.h  serializer.cpp  serializer.h
perfometer/test/: start_stop_out_of_order.cpp  test_formatter.cpp  test_start_stop.cpp
printer/: CMakeLists.txt
printer/src/: main.cpp
samples/: CMakeLists.txt
samples/src/: events.cpp  pause.cpp  simple.cpp  thread_pool.cpp  threads.cpp
test/: CMakeLists.txt
test/src/: test_format_time.cpp
utils/: CMakeLists.txt
utils/include/utils/: report_reader.h  time.h  timer.h
utils/src/: report_reader.cpp  time.cpp
utils/test/: test_format_time.cpp
visualizer/: CMakeLists.txt
visualizer/src/: PerfometerReport.cpp  PerfometerReport.h  TimeLineComponent.cpp  TimeLineComponent.h  TimeLineConfig.h  TimeLineParameters.h  TimeLineThread.cpp  TimeLineThread.h  TimeLineView.cpp  TimeLineView.h  Utils.cpp  Utils.h  main.cpp
workflows/: build_linux.sh
